--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="timeline-card">
         <h2>1968</h2>
         <h3>Intel Founded</h3>
-        <img src="img/1.jpg" alt="Intel founders" />
+        <img src="img/intel-founded.jpg" alt="Intel founders" />
         <div class="timeline-details">
           <p>
             Robert Noyce and Gordon Moore rename the newly formed company 
@@ -40,7 +40,7 @@
       <div class="timeline-card">
         <h2>1971</h2>
         <h3>First Microprocessor</h3>
-        <img src="img/2.jpg" alt="Intel 4004 Microprocessor" />
+        <img src="img/first-microprocessor.jpg" alt="Intel 4004 Microprocessor" />
         <div class="timeline-details">
           <p>
             Intel debuts the 4004, the world's first commercial microprocessor, 
@@ -52,7 +52,7 @@
       <div class="timeline-card">
         <h2>1978</h2>
         <h3>8086 Processor</h3>
-        <img src="img/3.jpg" alt="Intel 8086 Processor" />
+        <img src="img/8086-processor.jpg" alt="Intel 8086 Processor" />
         <div class="timeline-details">
           <p>
             Launch of the 8086 processor, establishing the x86 architecture 
@@ -63,7 +63,7 @@
       <div class="timeline-card">
         <h2>1985</h2>
         <h3>386 Processor</h3>
-        <img src="img/4.jpg" alt="Intel 386 Processor" />
+        <img src="img/386-processor.jpg" alt="Intel 386 Processor" />
         <div class="timeline-details">
           <p>
             Intel introduces the 386 processor with 32-bit architecture, 
@@ -75,7 +75,7 @@
       <div class="timeline-card">
         <h2>2006</h2>
         <h3>Peak GHG Emissions</h3>
-        <img src="https://placehold.co/250x100" alt="GHG Emissions" />
+        <img src="img/peak-ghg-emissions.jpg" alt="GHG Emissions" />
         <div class="timeline-details">
           <p>
             This year marks Intel's highest annual greenhouse gas emissions 
@@ -88,7 +88,7 @@
       <div class="timeline-card">
         <h2>2020</h2>
         <h3>RISE Strategy</h3>
-        <img src="https://placehold.co/250x100" alt="RISE Strategy" />
+        <img src="img/rise-intel.jpg" alt="RISE Strategy" />
         <div class="timeline-details">
           <p>
             Intel launches its RISE (Responsible, Inclusive, Sustainable, 
@@ -100,7 +100,7 @@
       <div class="timeline-card">
         <h2>2022</h2>
         <h3>Net-Zero By 2040</h3>
-        <img src="https://placehold.co/250x100" alt="Net-Zero Announcement" />
+        <img src="img/net-zero-emissions.jpg" alt="Net-Zero Announcement" />
         <div class="timeline-details">
           <p>
             Intel announces its commitment to achieve net-zero greenhouse 
@@ -112,7 +112,7 @@
       <div class="timeline-card">
         <h2>2023</h2>
         <h3>Renewable Electricity</h3>
-        <img src="https://placehold.co/250x100" alt="Renewable Electricity" />
+        <img src="img/renewable-electricity.jpg" alt="Renewable Electricity" />
         <div class="timeline-details">
           <p>
             The company achieves 99% renewable electricity usage worldwide, 
@@ -124,7 +124,7 @@
       <div class="timeline-card">
         <h2>2024</h2>
         <h3>Sustainability Summit</h3>
-        <img src="https://placehold.co/250x100" alt="Sustainability Summit" />
+        <img src="img/sustainability-summit.jpg" alt="Sustainability Summit" />
         <div class="timeline-details">
           <p>
             Intel hosts its first Sustainability Summit, uniting suppliers, 
