Refactor footer structure in index.html; adjust header padding and timeline styles in style.css for improved layout and responsiveness

--- a/index.html
+++ b/index.html
@@ -141,5 +141,8 @@
   <footer>
     <p>By Matthew Ramsey &copy; 2025 Intel Sustainability Project. For learning purposes only.</p>
   </footer>
+  <!-- End of main content -->
+
 </body>
+<!-- End of HTML document -->
 </html>
